
cmake_minimum_required(VERSION 3.8)

PROJECT(CalcPhy CXX)

include_directories("${PROJECT_SOURCE_DIR}/libs/FeNAL/include")
include_directories("${PROJECT_SOURCE_DIR}/src")
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g2 -ggdb")  
SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")

ADD_SUBDIRECTORY("${PROJECT_SOURCE_DIR}/libs/FeNAL")
ADD_SUBDIRECTORY(src)
